
* ws-salink:2013-52[]
+
The ASN.1 PER dissector could crash. Discovered by Oliver-Tobias Ripka.
// Fixed in trunk: r49985
// Fixed in trunk-1.10: r50702
// Fixed in trunk-1.8: r50703
(ws-buglink:8722[])
+
Versions affected: 1.10.0, 1.8.0 to 1.8.7
//+
//cve-idlink:GENERIC-MAP-NOMATCH[]

* ws-salink:2013-53[]
+
The PROFINET Real-Time dissector could crash.
// Fixed in trunk: r50651
// Fixed in trunk-1.10: r?????
(ws-buglink:8904[])
+
Versions affected: 1.10.0
//+
//cve-idlink:GENERIC-MAP-NOMATCH[]


The following bugs have been fixed:

//* Wireshark will practice the jazz flute for hours on end when you're trying to sleep. ws-buglink:0000[]

* Mark retransmitted SYN and FIN packets as retransmissions.

* Wireshark hides under Taskbar. (ws-buglink:3034)

* IEEE 802.15.4 frame check sequence in "Chipcon mode" not displayed correctly. (ws-buglink:4507)

* Colors used by colorize_filter_te_as_* should be configurable. (ws-buglink:5413)

* Mask in Lua ProtoField.uint32() does not work as expected. (ws-buglink:5734)

* Crash when applying filter with Voip calls. (ws-buglink:6090)

* Delta time regressions to tshark introduced with SVN 45071. (ws-buglink:8160)

* Add MAC-DATA support to TETRA dissector and other minor improvements. (ws-buglink:8708)

* Crash analyzing VoIP Calls (T38). (ws-buglink:8736)

* Wireshark writes empty NRB FQDN which makes trace unloadable. (ws-buglink:8763)

* Quick launch icon is absent, so it shows up as a generic icon. (ws-buglink:8773)

* Wrong encoding for 2 pod files, UTF-8 characters in another. (ws-buglink:8774)

* SCSI (SPC) sense key specific information field must not include SKSV. (ws-buglink:8782)

* Wireshark crashes when closing Flow Graph with Graph Analysis opened. (ws-buglink:8793)

* Wrong size of LLRP ProtocolID Parameter in Accessspec Parameter. (ws-buglink:8809)

* Detection of IPv6 works only on Solaris 8. (ws-buglink:8813)

* ip.opt.type triggers for TCP NOP option. (ws-buglink:8823)
